# Luloc-ASTI-25-26

./: .cursorrules  .gitignore  .windsurfrules  AI_INSTRUCTIONS.md  README.md
.agents/skills/lurloc_dev/: SKILL.md
.github/workflows/: auto-sync-prs.yml
01-firmware/: (Depreciated) Leer Sensor IR y sacar sensor  ESP-IDF freeRTOS ADC_read task  README.md
01-firmware/AlgSumo/: .gitignore  CMakeLists.txt  package.xml
01-firmware/AlgSumo/log/: latest_build
01-firmware/AlgSumo/src/: esp32.cpp  main.cpp
01-firmware/ESP32-P4-ETH/: .gitignore  CMakeLists.txt  COMMUNICATIONS_SPEC.md  Kconfig.projbuild  MQTT_COMMANDS_EVENTS.md  STATE_MACHINE_ARCHITECTURE.md  sdkconfig  sdkconfig.defaults
01-firmware/ESP32-P4-ETH/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  system_init.c
01-firmware/ESP32-P4-ETH/main/modes/: mode_calibrate.c  mode_calibrate.h  mode_interface.h  modes.c  modes.h
01-firmware/ESP32-P4-ETH/main/modes/calibrate/: mode_calibrate.c  mode_calibrate_line.c
01-firmware/ESP32-P4-ETH/main/modes/follow_line/: follow_line_logic.c  follow_line_logic.h  mode_follow_line.c
01-firmware/ESP32-P4-ETH/main/modes/idle/: mode_idle.c
01-firmware/ESP32-P4-ETH/main/modes/teleoperation/: mode_teleoperation.c
01-firmware/ESP32-P4-ETH/main/tasks/: task_comms.c  task_comms.h  task_comms_cpu1.c  task_comms_cpu1.h  task_control.c  task_control.h  task_monitor.c  task_monitor.h  task_monitor_lowpower_cpu1.c  task_monitor_lowpower_cpu1.h  task_rtcontrol_cpu0.c  task_rtcontrol_cpu0.h  task_telemetry.c  task_telemetry.h
01-firmware/Prueba/: CMakeLists.txt
01-firmware/Prueba/main/: main.c
01-firmware/RASPBERRY-PI5/: setupROS2(24.04).sh  setup_dependencias.sh  setup_libgpiod.sh
01-firmware/pruebaSensor/: pruebaSensor.ino
01-firmware/pruebaSensor/Algoritmo_SigueLineas/: desktop.ini  platformio.ini
02-software/: .env  README.md  docker-compose.yml  start_ap.sh  stop_ap.sh
02-software/01-vision/: Dockerfile
02-software/01-vision/src/: cam_stream.py  crearPerspectiva.py  feedforward.py  vision.py
02-software/02-navigation/: Dockerfile
02-software/03-dashboard/: Dockerfile
02-software/03-main-controller/: Dockerfile
02-software/04-backend/: Dockerfile
02-software/05-database/: Dockerfile
02-software/05-telemetry/telegraf/: telegraf.conf
02-software/06-metrics/: Dockerfile
02-software/06-metrics/src/: telegraf.conf
02-software/06-mqtt-broker/mosquitto/: mosquitto.conf
02-software/07-mqtt-broker/: Dockerfile
03-Assets/: README.md
03-Assets/02-media/sound_effects/: LowBattery.pcm  Startup.pcm
03-docs/: BEST_PRACTICES.md  system_requirements.md
03-docs/firmware/: calibration_guide.md  folder_structure.md  line_sensor_calibration.md  mqtt_api.md  mqtt_standard.md
03-docs/firmware/architecture/: modes_architecture.md
03-docs/firmware/components/: audio_player.md  encoder_sensor.md  espressif__es8311.md  ethernet.md  ina219_sensor.md  ina226_sensor.md  line_follower_ctrl.md  line_sensor.md  logger.md  motor_velocity_ctrl.md  motors.md  mqtt_api_responder.md  mqtt_custom_client.md  performance_monitor.md  pid_tuner.md  ptp_client.md  shared_memory.md  state_machine.md  telemetry_manager.md  test_sensor.md
03-docs/firmware/mains/: app_main.md  system_init.md
03-docs/firmware/tasks/: task_comms_cpu1.md  task_monitor_lowpower_cpu1.md  task_rtcontrol_cpu0.md
03-docs/software/: folder_structure.md  grafana.md  influxdb.md  message_broker.md  navigation_node.md  telegraf.md  vision_node.md
04-Challenges/01-Follow-Lines/: README.txt
04-Challenges/02-Sumo/: README.txt
docs/: Preentrega - Luloc UJI Robotics Team.md  ReadMe.md  cronograma-gantt.csv  formacion-tecnica-equipo.md  presupuesto-componentes.csv  presupuesto-resumen.csv
(+97 files in other folders)
