idf_component_register(
    SRCS
        "app_main.c"
        "system_init.c"
        "tasks/task_rtcontrol_cpu0.c"
        "tasks/task_comms_cpu1.c"
        "tasks/task_monitor_lowpower_cpu1.c"
    INCLUDE_DIRS
        "."
        "tasks"
    REQUIRES
        ethernet
        mqtt_custom_client
        test_sensor
        encoder_sensor
        telemetry_manager
        curvature_feedforward
        pid_siguelineas
        shared_memory
        state_machine
        audio_player
        esp_timer
        performance_monitor
        log
        motors
    PRIV_REQUIRES
        nvs_flash
        esp_event
        esp_netif
)
