idf_component_register(
    SRCS
        "app_main.c"
        "system_init.c"
        "tasks/task_rtcontrol_cpu0.c"
        "tasks/task_comms_cpu1.c"
        "tasks/task_monitor_lowpower_cpu1.c"
        "modes/modes.c"
        "modes/idle/mode_idle.c"
        "modes/calibrate/mode_calibrate.c"
        "modes/teleoperation/mode_teleoperation.c"
        "modes/follow_line/mode_follow_line.c"
        "modes/follow_line/follow_line_logic.c"
    INCLUDE_DIRS
        "."
        "tasks"
        "modes"
        "modes/idle"
        "modes/calibrate"
        "modes/teleoperation"
        "modes/follow_line"
    REQUIRES
        ethernet
        mqtt_custom_client
        test_sensor
        encoder_sensor
        telemetry_manager
        shared_memory
        state_machine
        audio_player
        esp_timer
        performance_monitor
        log
        motors
        ina226_sensor
        pid_tuner
        mqtt_api_responder
        motor_velocity_ctrl
        ptp_client
    PRIV_REQUIRES
        nvs_flash
        esp_event
        esp_netif
)
